@@ -1,5 +1,16 @@
 2002-05-02  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/op_session.c: couple of improvements
+ 
+	* dae/opd_util.c: fix warning
+
+	* doc/oprofile.xml: some docs on op_session
+
+	* pp/op_time.cpp: introduce -s parameter (should be
+	  in all utils)
+ 
+2002-05-02  John Levon  <moz@compsoc.man.ac.uk>
+
 	* oprof_report/Makefile.in: disable for release
  
 2002-05-02  John Levon  <moz@compsoc.man.ac.uk>
